[gd_scene load_steps=8 format=3 uid="uid://oxtnnbgsgopp"]

[ext_resource type="Script" path="res://Tutorials.gd" id="1_tuehq"]
[ext_resource type="PackedScene" uid="uid://4iwflqaoexa8" path="res://Objects/player.tscn" id="2_aykgv"]
[ext_resource type="Texture2D" uid="uid://5ijrlmq8rle2" path="res://Sprites/Ship_2_D_Medium.png" id="3_ymauy"]
[ext_resource type="Texture2D" uid="uid://xodaq28f6af4" path="res://Sprites/Ship_2_D_Medium3.png" id="4_5o31p"]
[ext_resource type="Texture2D" uid="uid://b0vrohuoluibx" path="res://Sprites/shapes.png" id="5_8jfdl"]
[ext_resource type="PackedScene" uid="uid://cnyfxgi8lvp1n" path="res://Objects/item_spawner.tscn" id="6_e0b2w"]
[ext_resource type="PackedScene" uid="uid://bdcib8w51pxj1" path="res://Objects/Enemy4.tscn" id="7_nkpvi"]

[node name="Tutorials" type="Node2D"]
script = ExtResource("1_tuehq")

[node name="Back" type="Button" parent="."]
offset_left = 8.0
offset_top = 5.0
offset_right = 122.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 100
text = "Back
"

[node name="Basics" type="Button" parent="."]
offset_left = 377.0
offset_top = 73.0
offset_right = 611.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 75
text = "Basics"

[node name="Drawing" type="Button" parent="."]
offset_left = 764.0
offset_top = 72.0
offset_right = 1075.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 75
text = "Drawing"

[node name="Tilting" type="Button" parent="."]
offset_left = 1248.0
offset_top = 74.0
offset_right = 1480.0
offset_bottom = 185.0
theme_override_font_sizes/font_size = 75
text = "Tilting"

[node name="TutorialLabel" type="Label" parent="."]
offset_left = 39.0
offset_top = 176.0
offset_right = 1106.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 50

[node name="Player" parent="." instance=ExtResource("2_aykgv")]
visible = false
position = Vector2(567, 1018.1)
hp = 9999

[node name="LeftButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(0.28, 1077.28)
rotation = -1.5708
scale = Vector2(0.624, 0.624)
texture_normal = ExtResource("3_ymauy")
texture_pressed = ExtResource("4_5o31p")
action = "left"

[node name="RightButton" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(1930.07, 923.815)
rotation = 1.5708
scale = Vector2(0.624, 0.624)
texture_normal = ExtResource("3_ymauy")
texture_pressed = ExtResource("4_5o31p")
action = "right"

[node name="TiltLabel" type="Label" parent="."]
visible = false
offset_left = 1571.0
offset_top = 33.0
offset_right = 1611.0
offset_bottom = 138.0
theme_override_font_sizes/font_size = 76

[node name="Shapes" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(907, 533.185)
scale = Vector2(0.63, 0.63)
texture = ExtResource("5_8jfdl")

[node name="ItemSpawner" parent="." instance=ExtResource("6_e0b2w")]
visible = false
position = Vector2(795, 355)
item = ExtResource("7_nkpvi")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Basics" to="." method="_on_basics_pressed"]
[connection signal="pressed" from="Drawing" to="." method="_on_drawing_pressed"]
[connection signal="pressed" from="Tilting" to="." method="_on_tilting_pressed"]
